# autoreg

./: CMakeLists.txt  Dockerfile  docker_build.sh
src/: autoreg.cpp
